Cambio de icono

--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "felizCumple",
+    "name": "Feliz cumpleaños",
     "slug": "felizCumple",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon2.jpg",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
